# 3DObjectTracking

ICG/: .gitignore  CMakeLists.txt  backup.txt  convert_ply2obj.py  example_opencv  example_opencv.cpp  example_time  example_time.cpp  generate_yaml_files.py  hello.cpp  readme.md  readme_hs.md  realsense_test  realsense_test.cpp  realsense_test2  test_realsense.cpp
ICG/doc/html/: classicg_1_1AzureKinectColorCamera.html  classicg_1_1AzureKinectColorCamera__inherit__graph.map  classicg_1_1AzureKinectDepthCamera.html  classicg_1_1AzureKinectDepthCamera__inherit__graph.map  classicg_1_1Camera.html  classicg_1_1Camera__inherit__graph.map  classicg_1_1ColorCamera.html  classicg_1_1ColorCamera__inherit__graph.map  classicg_1_1ColorViewer.html  classicg_1_1ColorViewer__inherit__graph.map  classicg_1_1DepthCamera.html  classicg_1_1DepthCamera__inherit__graph.map  classicg_1_1DepthModality.html  classicg_1_1DepthModality__inherit__graph.map  classicg_1_1DepthModel.html  classicg_1_1DepthModel__inherit__graph.map  classicg_1_1DepthViewer.html  classicg_1_1DepthViewer__inherit__graph.map  classicg_1_1Detector.html  classicg_1_1Detector__inherit__graph.map  classicg_1_1FocusedBasicDepthRenderer.html  classicg_1_1FocusedBasicDepthRenderer__inherit__graph.map  classicg_1_1FocusedDepthRenderer.html  (+70 more)
ICG/examples/: evaluate_rbot_dataset.cpp  evaluate_ycb_dataset.cpp  parameter_study_ycb_dataset.cpp  run_on_camera_sequence.cpp  ycb_evaluator.cpp
ICG/src/: body.cpp  camera.cpp  loader_camera.cpp  normal_viewer.cpp  tracker.cpp  viewer.cpp
ICG/test_azure/: CMakeLists.txt  main.cpp
